--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,3 +19,8 @@ body {
   background-color: $light;
 }
 
+
+.px-2 {
+  padding-left: ($spacer * .5) !important;
+  padding-right: ($spacer * .5) !important;
+}
